--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-typed": "^1.2.0",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4",
